# webssy

./: .gitignore  README.md  pyproject.toml
webssy/: __init__.py  __main__.py  cli.py  models.py
webssy/expanders/: __init__.py  ip_expander.py  target_builder.py
webssy/parsers/: __init__.py  input_parser.py  line_detector.py  nmap_parser.py
webssy/reporters/: __init__.py  grouper.py  html_reporter.py  template.html
webssy/scanner/: __init__.py  http_prober.py  orchestrator.py  screenshot_engine.py  worker_pool.py
webssy/utils/: logger.py  output.py  port_lists.py  validators.py
