[tool.poetry]
name = "webssy"
version = "0.1.0"
description = "Web screenshot tool for pentesting - capture screenshots of web interfaces"
authors = ["pixis"]
readme = "README.md"
license = "MIT"
packages = [{include = "webssy"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.21.0"
rich = "^13.0.0"
playwright = "^1.40.0"
httpx = "^0.25.0"
lxml = "^5.0.0"
pillow = "^10.0.0"
jinja2 = "^3.1.0"
imagehash = "^4.3.0"
cryptography = "^41.0.0"

[tool.poetry.scripts]
webssy = "webssy.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
